--- a/App.config
+++ b/App.config
@@ -8,6 +8,11 @@
     <!-- Twitter sign-up: https://dev.twitter.com/ -->
     <add key="twitterConsumerKey" value="" />
     <add key="twitterConsumerSecret" value="" />
+    
+    <!-- To separate permissions to twitter, a separe twitter app has access to DMs -->
+    <add key="twitterConsumerKeyDM" value="" />
+    <add key="twitterConsumerSecretDM" value="" />
+    
     <add key="twitterOAuthToken" value="" />
     <add key="twitterAccessToken" value="" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
@@ -28,7 +33,11 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.2.22.0" newVersion="4.2.22.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.28.0" newVersion="4.2.28.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="LinqToTwitterPcl" publicKeyToken="957107be965c25d9" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.4.30106" newVersion="3.0.4.30106" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
