--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Extended.Wpf.Toolkit" version="2.3" targetFramework="net45" />
   <package id="LinqToTwitter" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
@@ -10,7 +11,4 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Main" version="2.2.5" targetFramework="net45" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
-  <package id="Xceed.Products.Wpf.DataGrid.Base" version="5.4.14473.13530" targetFramework="net45" />
-  <package id="Xceed.Wpf.Controls" version="5.4.14473.13530" targetFramework="net45" />
-  <package id="Xceed.Wpf.DataGrid" version="5.4.14473.13530" targetFramework="net45" />
 </packages>
