--- a/Twitter Archive Eraser.csproj
+++ b/Twitter Archive Eraser.csproj
@@ -35,12 +35,12 @@
     <TargetCulture>en</TargetCulture>
     <ProductName>Twitter Archive Eraser</ProductName>
     <PublisherName>MARTANI</PublisherName>
-    <MinimumRequiredVersion>5.1.2.0</MinimumRequiredVersion>
+    <MinimumRequiredVersion>5.1.4.0</MinimumRequiredVersion>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>5.1.2.0</ApplicationVersion>
+    <ApplicationVersion>5.1.4.0</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -136,6 +136,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http" />
